--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
     width: 100%;
     /* background-image: linear-gradient( 135deg, #81FFEF 10%, #F067B4 100%); */
     background: linear-gradient(to top, rgba(0, 0, 0, 0.5)50%, rgba(0, 0, 0, 0.5)50%);  
-    background-image: url(img/aw.jfif);    
+    background-image: url(img/her.jpg);    
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
